# os-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.cfg  manager.c  manager.h  ripcs.sh
init/: init.c  init.h
process/: process.c  process.h
tests/: Makefile  test_pinfos  test_pinfos.c
timer/: timer.c  timer.h
utils/: utils.c  utils.h
